--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <main>
             <button onclick="showMessage()">Click for a Surprise</button>
-            <button onclick="drawRose(6,7)">Click for a Flower</button>
+            <button onclick="animateRose()">Click for a Flower</button>
             <p id="message" style="display:none;">I miss you! Can't wait to see you again! &#128149</p>
         </main>
         
