--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <button onclick="showMessage()">Click for a Surprise</button>
             <button onclick="animateRose()">Click for a Flower</button>
             <p id="message" style="display:none;">I miss you! Can't wait to see you again! &#128149</p>
+            <!-- Add this inside your main element -->
+            <p><a href="quiz.html" class="quiz-link">Take the Valentine's Quiz!</a></p>
+            
+
         </main>
         
     </div>
