--- a/quiz.html
+++ b/quiz.html
@@ -25,13 +25,14 @@
                 </div>
 
                 <div class="question">
-                    <label for="q2">What's my favorite flower?</label>
-                    <select id="q2" name="q2" required>
+                    <label for="wine">What's Casper's favourite wine?</label>
+                    <select id="wine" name="wine" required>
                         <option value="">Choose an option</option>
-                        <option value="rose">Rose</option>
-                        <option value="lily">Lily</option>
-                        <option value="sunflower">Sunflower</option>
-                        <option value="daisy">Daisy</option>
+                        <option value="paw">Paw-secco</option>
+                        <option value="cabslob">Cabernet Sloberon</option>
+                        <option value="cndp">Chateauneuf du pape</option>
+                        <option value="malbark">Malbark</option>
+                        <option value="char">Chardognay</option>
                     </select>
                 </div>
 
@@ -66,6 +67,17 @@
 
                         <input type="radio" id="martini" name="firstDate" value="martini">
                         <label for="martini">Espresso Martini</label>
+                    </div>
+                </div>
+
+                <div class="question">
+                    <label>Will you be my valentine?</label>
+                    <div class="radio-group">
+                        <input type="radio" id="yes" name="valentine" value="yes" required>
+                        <label for="yes">Yes</label>
+
+                        <input type="radio" id="no" name="valentine" value="no">
+                        <label for="no">No</label>
                     </div>
                 </div>
 
